--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,13 @@
     "material-ui": "^0.20.0",
     "mathjs": "^4.1.2",
     "react": "^16.3.2",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "react-scrollbar": "^0.5.4",
+    "react-scrollbar-js": "^1.0.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0"
   },
